Sun Nov 25 18:51:16 GMT 2007  Ivan Shmakov  <oneingray@gmail.com>

	* man/Rules.man: replace.sed lives in $(top_builddir)/man, not
	  $(top_srcdir)/man.

Sat Nov 24 10:45:50 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): If the environment variable
	  MANROFFOPT is set, append its contents to the *roff command line
	  (thanks, Ivan Shmakov; Debian bug #451187).
	* man/man1/man.man1 (ENVIRONMENT): Document MANROFFOPT.
	* docs/NEWS: Document this.

Mon Nov 19 19:41:18 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AM_INIT_AUTOMAKE): Require Automake 1.10. Ming Hua
	  reported that Automake 1.9 doesn't have the MKDIR_P feature we
	  depend on.

Tue Nov 13 22:10:51 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (use_grep, do_whatis, word_fnmatch, search, main):
	  Rename regex to regex_opt, as Solaris' <libgen.h> defines a regex
	  function (thanks to the Nexenta developers).

Mon Nov 12 19:24:00 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/globbing_test.c (main),
	  src/lexgrog_test.c (main), src/zsoelim.l (main): Enable
	  localisation (Debian bug #448395).

Sun Nov 11 05:43:16 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Issue a useful error message if
	  gnulib/po/Makefile.in.in does not exist (reported by Ming Hua).

Mon Oct 22 00:04:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	Bruno Haible notes in
	http://lists.gnu.org/archive/html/groff/2005-12/msg00061.html that
	setlocale is supported on all known systems, and it is in C89. Use
	it unconditionally.

	* configure.ac: Don't check for setlocale.
	* src/catman.c (parse_for_sec), src/man.c (main), src/manp.c
	  (add_nls_manpath), src/whatis.c (main): Remove HAVE_SETLOCALE
	  conditionals.

Sun Oct 21 21:56:02 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Forbid output tokens beginning with "MAN_".

Sun Oct 21 21:52:43 BST 2007  Colin Watson  <cjwatson@debian.org>
