@@ -1,3 +1,9 @@
+Sun Nov 25 21:01:22 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/encodings.c (get_roff_encoding): Just use the fallback
+	  encoding if device is NULL, rather than crashing. Bug reported by
+	  Ivan Shmakov.
+
 Sun Nov 25 18:51:16 GMT 2007  Ivan Shmakov  <oneingray@gmail.com>
 
 	* man/Rules.man: replace.sed lives in $(top_builddir)/man, not
